# content-crew-apify

./: DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  crewai.yaml  deploy.py  pyproject.toml  setup.sh  simple_deploy.py  test_crew.py
src/content_crew_apify/: crew.py  main.py
src/content_crew_apify/config/: agents.yaml  tasks.yaml
src/content_crew_apify/tools/: custom_tool.py
