[project]
name = "content_crew_apify"
version = "0.1.0"
description = "content_crew_apify using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
content_crew_apify = "content_crew_apify.main:run"
run_crew = "content_crew_apify.main:run"
train = "content_crew_apify.main:train"
replay = "content_crew_apify.main:replay"
test = "content_crew_apify.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
